fix: ui issue for logs page dropdown and left navigation overlap (#1775)

--- a/web/src/styles/app.scss
+++ b/web/src/styles/app.scss
@@ -71,3 +71,6 @@
         font-weight: 700;
     }
 }
+.q-position-engine{
+    z-index: 2; 
+}
